--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -4,11 +4,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{6C0A8CF1-42E2-4CF6-8494-ABDAB1C0576C}</ProjectGuid>
-        <OutputType>Exe</OutputType>
+        <ProjectGuid>{EEDD0514-0F1D-487A-8393-724F1743767D}</ProjectGuid>
+        <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>TestConsoleRiderProject</RootNamespace>
-        <AssemblyName>TestConsoleRiderProject</AssemblyName>
+        <RootNamespace>AitportStuff</RootNamespace>
+        <AssemblyName>AitportStuff</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>8</LangVersion>
@@ -42,7 +42,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Program.cs" />
+        <Compile Include="Class1.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
