--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -45,6 +45,7 @@
         <Compile Include="Class1.cs"/>
         <Compile Include="Flight.cs"/>
         <Compile Include="Location.cs"/>
+        <Compile Include="Priority.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
