Add basic schedule

--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -44,6 +44,7 @@
     <ItemGroup>
         <Compile Include="Class1.cs"/>
         <Compile Include="Flight.cs"/>
+        <Compile Include="ISchedule.cs"/>
         <Compile Include="Location.cs"/>
         <Compile Include="Priority.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
