--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -47,6 +47,7 @@
         <Compile Include="ISchedule.cs"/>
         <Compile Include="Location.cs"/>
         <Compile Include="NullSchedule.cs"/>
+        <Compile Include="Order.cs"/>
         <Compile Include="Priority.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
