--- a/AirportStuffTests/AirportStuffTests.csproj
+++ b/AirportStuffTests/AirportStuffTests.csproj
@@ -42,6 +42,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="SchedulerTests.cs"/>
         <Compile Include="Tests.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
