--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -42,9 +42,11 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BasicScheduler.cs"/>
         <Compile Include="Class1.cs"/>
         <Compile Include="Flight.cs"/>
         <Compile Include="ISchedule.cs"/>
+        <Compile Include="IScheduler.cs"/>
         <Compile Include="Location.cs"/>
         <Compile Include="NullSchedule.cs"/>
         <Compile Include="Order.cs"/>
