--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -48,6 +48,7 @@
         <Compile Include="ISchedule.cs"/>
         <Compile Include="IScheduler.cs"/>
         <Compile Include="Location.cs"/>
+        <Compile Include="LocationExtensions.cs"/>
         <Compile Include="NullSchedule.cs"/>
         <Compile Include="Order.cs"/>
         <Compile Include="Priority.cs"/>
