--- a/AitportStuff/AitportStuff.csproj
+++ b/AitportStuff/AitportStuff.csproj
@@ -42,6 +42,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BasicSchedule.cs"/>
         <Compile Include="BasicScheduler.cs"/>
         <Compile Include="Class1.cs"/>
         <Compile Include="Flight.cs"/>
